--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p>Chickpea, herbs and spices</p>
     <h2>Pizza</h2>
     <p>Pepperoni, cheese and sauce</p>
+    <a href="location.html">Our location</a>
   </body>
 </html>
