--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <h1>Menu</h1>
     <h2>Falafel</h2>
     <p>Chickpea, herbs and spices</p>
+    <img src="falafel.jpg" width="240" height="135" />
     <h2>Pizza</h2>
     <p>Pepperoni, cheese and sauce</p>
+    <img src="pizza.jpg" width="240" height="135" /><br />
     <a href="location.html">Our location</a>
   </body>
 </html>
